fix mobile overflow

--- a/_sass/minima/_footer.scss
+++ b/_sass/minima/_footer.scss
@@ -2,11 +2,11 @@
  * Site footer
  */
 .site-footer {
-  padding: 1.5rem 1rem;
-  text-align: center;
+  padding: 3rem 1rem;
+  text-align: left;
   position: relative;
   z-index: 100;
-  height: 100vh;
+  min-height: calc( 100vh - 6rem );
   display: flex;
   align-items: center;
   color: white;
@@ -29,7 +29,8 @@
   }
 
   .copyright {
-    font-size: 1rem;
+    font-size: .875rem;
+    margin-top: 2rem;
   }
 }
 
